# bde_xbrl_editor

./: .gitignore  CLAUDE.md  pyproject.toml  report.json  report_full.json  run.sh  skills-lock.json
.specify/memory/: constitution.md
conformance/XBRL-CONF-2025-07-16/: xbrl.xml
conformance/XBRL-XDT-CONF-2025-09-09/: xdt.xml  xdt.xsd
conformance/formula-conformance-2022-07-21/: index.xml
conformance/table-linkbase-conformance-2024-12-17/: testcases-index.xml
docs/: conformance-xbrl21-validator-roadmap.md  xbrl-processor-prd.md
llm-wiki/: index.md  log.md  schema.md
llm-wiki/.obsidian/: app.json  workspace.json
llm-wiki/concepts/: bde-xbrl-editor-overview.md  generic-labels.md  generic-links.md  generic-references.md  table-linkbase-overview.md  table-linkbase.md  xbrl-2.1.md  xbrl-formula.md
llm-wiki/raw/: Extensible Business Reporting Language (XBRL) 2.1.md  Extensible Enumerations 1.0.md  Extensible Enumerations 2.0.md  Generic labels 1.0.md  Generic references 1.0.md  Table Linkbase 1.0.md  Table Linkbase Overview 1.0.md  XBRL Formula Overview 1.0.md  XBRL Generic Links 1.0.md  pyproject.toml
specs 2/001-taxonomy-loading-cache/: spec.md
specs 2/002-xbrl-instance-creation/: spec.md
specs 2/005-instance-validation/: data-model.md  plan.md  spec.md
specs/001-taxonomy-loading-cache/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/002-xbrl-instance-creation/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/003-table-rendering-pwd/: data-model.md  plan.md  research.md  spec.md  tasks.md
tests/: conftest.py
(+4925 files in other folders)
