[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bde-xbrl-editor"
version = "0.1.0"
description = "BDE XBRL Editor — desktop application for creating, editing, and validating XBRL financial reporting documents for Banco de España taxonomies"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "lxml>=5.0",
    "xmlschema>=3.0",
    "elementpath>=4.4",
    "cachetools>=5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pytest-benchmark>=4.0",
    "ruff>=0.4",
]

[project.scripts]
bde-xbrl-editor = "bde_xbrl_editor.__main__:main"
bde-xbrl-conformance = "bde_xbrl_editor.conformance.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "qt: marks tests that exercise Qt/PySide UI behavior",
]
